# adventofcode

./: .gitignore  Cargo.toml  README.md  daygen.sh
2021/01/: Cargo.toml  input.txt  part1_test.txt  part2_test.txt
2021/01/src/: main.rs
2021/02/: Cargo.toml
2021/02/src/: main.rs
2021/03/: Cargo.toml
2021/03/src/: main.rs
2021/04/: Cargo.toml
2021/04/src/: main.rs
aocshared/: Cargo.toml
aocshared/src/: aoc.rs  grid.rs  lib.rs  tree.rs
src/2019/01/: main.rs
src/2019/02/: main.rs
src/2020/01/: main.rs
src/2020/02/: main.rs
src/2020/03/: main.rs
src/2020/04/: main.rs
src/2020/05/: main.rs
src/2020/06/: main.rs
src/2020/07/: main.rs
src/2020/08/: main.rs
src/2020/09/: main.rs
src/2020/10/: main.rs
src/2020/11/: main.rs
src/2020/12/: main.rs
src/2020/13/: main.rs
src/2020/14/: main.rs
src/2021/01/: main.rs
src/2021/02/: main.rs
src/2021/03/: main.rs
src/2021/04/: main.rs
src/2021/05/: main.rs
src/2021/06/: main.rs
src/2021/07/: main.rs
src/2021/08/: main.rs
src/2021/09/: main.rs
src/2021/10/: main.rs
src/2021/11/: main.rs
src/2021/12/: main.rs
src/2021/13/: main.rs
src/2021/14/: main.rs
src/2021/15/: main.rs
src/2021/16/: main.rs
src/2021/17/: main.rs
src/2021/18/: main.rs
src/2021/19/: main.rs
src/2021/20/: main.rs
src/2021/21/: main.rs
src/2021/22/: main.rs
src/2021/23/: main.rs  solve.py
src/2021/24/: main.rs  xac  xad  xag  xaj  xal
src/2021/25/: main.rs
src/2022/01/: main.rs
src/2022/02/: main.rs
src/2022/03/: main.rs
src/2022/04/: main.rs
src/2022/05/: main.rs
src/2022/06/: main.rs
src/2022/07/: main.rs
src/2022/08/: main.rs
src/2022/09/: main.rs
src/2022/10/: main.rs
src/2022/11/: main.rs
src/2022/12/: main.rs
src/2023/01/: main.rs
src/2023/02/: main.rs
src/2023/03/: main.rs
src/2023/04/: main.rs
src/2023/05/: main.rs
src/2023/06/: main.rs
src/2023/07/: main.rs
src/2023/08/: main.rs
src/2023/09/: main.rs
src/2023/10/: main.rs
src/2023/11/: main.rs
src/2023/12/: main.rs
src/2024/01/: main.rs
src/2024/02/: main.rs
src/2024/04/: main.rs
src/2024/06/: main.rs
src/2024/08/: main.rs
src/2025/01/: main.rs
src/2025/02/: main.rs
src/2025/03/: main.rs
src/2025/04/: main.rs
src/2025/05/: main.rs
src/2025/07/: main.rs
src/2025/08/: main.rs
src/2025/09/: main.rs
src/aocshared/: aoc.rs  intcode.rs  lib.rs  tree.rs
