[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.7.0"
aocf = "0.1.21"
itertools = "0.10"
num-integer = "0.1.44"
hashbrown = "0.13.1"
array_tool = "1.0.3"
range-ext = "0.1.3"
aocshared = { path = "aocshared" }

[[bin]]
name = "aoc2021_01"
path = "src/2021/01/main.rs"

[[bin]]
name = "aoc2021_02"
path = "src/2021/02/main.rs"

[[bin]]
name = "aoc2021_03"
path = "src/2021/03/main.rs"

[[bin]]
name = "aoc2021_04"
path = "src/2021/04/main.rs"

[[bin]]
name = "aoc2020_01"
path = "src/2020/01/main.rs"

[[bin]]
name = "aoc2020_02"
path = "src/2020/02/main.rs"

[[bin]]
name = "aoc2021_05"
path = "src/2021/05/main.rs"

[[bin]]
name = "aoc2020_03"
path = "src/2020/03/main.rs"

[[bin]]
name = "aoc2020_04"
path = "src/2020/04/main.rs"

[[bin]]
name = "aoc2020_05"
path = "src/2020/05/main.rs"

[[bin]]
name = "aoc2021_06"
path = "src/2021/06/main.rs"

[[bin]]
name = "aoc2021_07"
path = "src/2021/07/main.rs"

[[bin]]
name = "aoc2021_08"
path = "src/2021/08/main.rs"

[[bin]]
name = "aoc2020_06"
path = "src/2020/06/main.rs"

[[bin]]
name = "aoc2021_09"
path = "src/2021/09/main.rs"

[[bin]]
name = "aoc2020_07"
path = "src/2020/07/main.rs"

[[bin]]
name = "aoc2021_10"
path = "src/2021/10/main.rs"

[[bin]]
name = "aoc2021_11"
path = "src/2021/11/main.rs"

[[bin]]
name = "aoc2021_12"
path = "src/2021/12/main.rs"

[[bin]]
name = "aoc2021_13"
path = "src/2021/13/main.rs"

[[bin]]
name = "aoc2020_08"
path = "src/2020/08/main.rs"

[[bin]]
name = "aoc2020_09"
path = "src/2020/09/main.rs"

[[bin]]
name = "aoc2020_10"
path = "src/2020/10/main.rs"

[[bin]]
name = "aoc2021_14"
path = "src/2021/14/main.rs"

[[bin]]
name = "aoc2021_15"
path = "src/2021/15/main.rs"

[[bin]]
name = "aoc2021_16"
path = "src/2021/16/main.rs"

[[bin]]
name = "aoc2021_17"
path = "src/2021/17/main.rs"

[[bin]]
name = "aoc2020_11"
path = "src/2020/11/main.rs"

[[bin]]
name = "aoc2020_12"
path = "src/2020/12/main.rs"

[[bin]]
name = "aoc2021_18"
path = "src/2021/18/main.rs"

[[bin]]
name = "aoc2021_19"
path = "src/2021/19/main.rs"

[[bin]]
name = "aoc2021_20"
path = "src/2021/20/main.rs"

[[bin]]
name = "aoc2021_21"
path = "src/2021/21/main.rs"

[[bin]]
name = "aoc2021_22"
path = "src/2021/22/main.rs"
[[bin]]
name = "aoc2020_13"
path = "src/2020/13/main.rs"

[[bin]]
name = "aoc2021_23"
path = "src/2021/23/main.rs"

[[bin]]
name = "aoc2021_24"
path = "src/2021/24/main.rs"

[[bin]]
name = "aoc2021_25"
path = "src/2021/25/main.rs"

[[bin]]
name = "aoc2020_14"
path = "src/2020/14/main.rs"

[[bin]]
name = "aoc2022_01"
path = "src/2022/01/main.rs"

[[bin]]
name = "aoc2022_02"
path = "src/2022/02/main.rs"

[[bin]]
name = "aoc2022_03"
path = "src/2022/03/main.rs"

[[bin]]
name = "aoc2022_04"
path = "src/2022/04/main.rs"

[[bin]]
name = "aoc2019_01"
path = "src/2019/01/main.rs"

[[bin]]
name = "aoc2019_02"
path = "src/2019/02/main.rs"

[[bin]]
name = "aoc2022_05"
path = "src/2022/05/main.rs"

[[bin]]
name = "aoc2022_06"
path = "src/2022/06/main.rs"

[[bin]]
name = "aoc2022_07"
path = "src/2022/07/main.rs"

[[bin]]
name = "aoc2022_08"
path = "src/2022/08/main.rs"

[[bin]]
name = "aoc2022_09"
path = "src/2022/09/main.rs"

[[bin]]
name = "aoc2022_10"
path = "src/2022/10/main.rs"

[[bin]]
name = "aoc2022_11"
path = "src/2022/11/main.rs"

[[bin]]
name = "aoc2023_01"
path = "src/2023/01/main.rs"

[[bin]]
name = "aoc2023_02"
path = "src/2023/02/main.rs"

[[bin]]
name = "aoc2022_12"
path = "src/2022/12/main.rs"

[[bin]]
name = "aoc2023_03"
path = "src/2023/03/main.rs"

[[bin]]
name = "aoc2023_04"
path = "src/2023/04/main.rs"

[[bin]]
name = "aoc2023_05"
path = "src/2023/05/main.rs"

[[bin]]
name = "aoc2023_06"
path = "src/2023/06/main.rs"
