[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.7.0"
aocf = "0.1.21"
itertools = "0.14.0"
num-integer = "0.1.44"
hashbrown = "0.16.1"
array_tool = "1.0.3"
range-ext = "0.3.0"
aocshared = { path = "aocshared" }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
